# django-whiff

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
src/django_whiff/: __init__.py  apps.py
src/django_whiff/templatetags/: whiff.py
tests/: settings.py  test_whiff.py
