[project]
name = "django-whiff"
version = "0.1.0"
description = "A Django template tag that combines the functionality of 'with' and 'if'."
readme = "README.md"
requires-python = ">=3.7"
dependencies = ["django>=3.2"]

authors = [
    {name = "Eric Hamiter", email = "ehamiter@gmail.com"}
]

license = {text = "MIT"}

classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
